--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventurous people
                 </h2>
@@ -40,7 +40,26 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    Text Content
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo.
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Live adventures like you never have before
+                    </h3>
+                    <p class="paragraph">
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+
+                    <a href="#" class="btn-text">Learn More &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     Image Composition
