--- a/index.html
+++ b/index.html
@@ -112,6 +112,77 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-tours">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Most popular tours
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front card__side--front-1">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <div class="card__heading card__heading">
+                                <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cosy hotels</li>
+                                    <li>Difficulty: easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            BACK
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span--1">Sea Explorer</span>
+                            </h4>
+                            <div class="card__details">
+
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            BACK
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading card__heading--2">
+
+                            </h4>
+                            <div class="card__details">
+
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            BACK
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- <section class="grid-test">
