--- a/index.html
+++ b/index.html
@@ -136,12 +136,18 @@
                                     <li>Up to 30 people</li>
                                     <li>2 tour guides</li>
                                     <li>Sleep in cosy hotels</li>
-                                    <li>Difficulty: easy</li>
+                                    <li>Difficulty: Easy</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn--white ">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -151,15 +157,27 @@
                             <div class="card__picture card__picture--2">
                                 &nbsp;
                             </div>
-                            <h4 class="card__heading">
-                                <span class="card__heading-span--1">Sea Explorer</span>
-                            </h4>
+                            <div class="card__heading card__heading">
+                                <span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
+                            </div>
                             <div class="card__details">
-
+                                <ul>
+                                    <li>7 day tour</li>
+                                    <li>Up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: Medium</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-2">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$497</p>
+                                </div>
+                                <a href="#" class="btn btn--white ">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,18 +187,34 @@
                             <div class="card__picture card__picture--3">
                                 &nbsp;
                             </div>
-                            <h4 class="card__heading card__heading--2">
-
-                            </h4>
+                            <div class="card__heading card__heading">
+                                <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
+                            </div>
                             <div class="card__details">
-
+                                <ul>
+                                    <li>5 day tour</li>
+                                    <li>Up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: Hard</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-3">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$897</p>
+                                </div>
+                                <a href="#" class="btn btn--white ">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="u-center-text u-margin-bottom-huge">
+                <a href="#" class="btn btn--green">Discover all tours</a>
             </div>
         </section>
     </main>
