--- a/index.html
+++ b/index.html
@@ -291,11 +291,10 @@
                                 <input type="text" class="form__input" id="name" placeholder="Full name" required />
                                 <label for="name" class="form__label">Full Name</label>
                             </div>
-
                             <div class="form__group">
                                 <input type="email" class="form__input" id="email" placeholder="Email address"
                                     required />
-                                <label for="email" class="form__label">Full Name</label>
+                                <label for="email" class="form__label">Email address</label>
                             </div>
                         </form>
                     </div>
