Building a Pure CSS Popup Part-2 (Complete)

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white ">Book now!</a>
+                                <a href="#popup" class="btn btn--white ">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn--white ">Book now!</a>
+                                <a href="#popup" class="btn btn--white ">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn--white ">Book now!</a>
+                                <a href="#popup" class="btn btn--white ">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -387,13 +387,14 @@
         </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
                 <img class="popup__img" src="img/nat-8.jpg" alt="Tour Photo" />
                 <img class="popup__img" src="img/nat-9.jpg" alt="Tour Photo" />
             </div>
             <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">
                     Important &ndash; Please read the terms before booking
